@@ -1,0 +1,2 @@
+The physical processor has 64 virtual processors (0-63)
+  SPARC-T5 (chipid 0, clock 3600 MHz)
