@@ -53,6 +53,7 @@ netdiscovery/netinventory:
 * fix #738: fix time expiration when netinventory is chained with netdiscovery
   while using fusioninventory-netdiscovery script --inventory option
 * fix #741: device with empty description was no more inventoried
+* fix #726: Added support for latest SPARC cpus on Solaris
 
 2.5.1 Tue, 02 Jul 2019
 
